# 1.11.0

* Ignore style definitions using a style ID that has already been used.

# 1.10.0

* Add "Heading" and "Body" styles, as found in documents created by Apple Pages,
  to the default style map.

* Handle structured document tags representing checkboxes wrapped in other
  elements, such as table cells. Previously, the wrapping elements would have
  been ignored.

* Ignore deleted table rows.

* Add notes on security.

* Revert the change to explicitly use commonjs modules. This appeared to cause
  issues with some bundlers such as webpack when using mammoth.browser.js.

# 1.9.1

* Ignore AlternateContent elements when there is no Fallback element.

* Explicitly use commonjs modules. Since the modules should have previously been
  implicitly treated as commonjs modules, this shouldn't affect behaviour.

# 1.9.0

* Update lop to 0.4.2, which removes the use of the util module when there are
  errors during parsing. This should remove the need to polyfill util in the
  browser.

* Detect checkboxes, both as complex fields and structured document tags, and
  convert them to checkbox inputs.

# 1.8.0

* Add style mapping for highlights.

# 1.7.2

* Remove the use of the path module from common code used by browser builds.
  This should remove the need to polyfill path in the browser.

# 1.7.1

* Handle numbering level definitions without an explicit format.

* Switch the precedence of numbering properties in paragraph properties and the
  numbering in paragraph styles so that the numbering properties in paragraph
  properties takes precedence.

# 1.7.0

* Support attributes in HTML paths in style mappings.

* Improve error message when failing to find the body element in a document.

* Add support for the strict document format.

# 1.6.0

* Add transformDocument to the TypeScript declarations.

* Support merged paragraphs when revisions are tracked.

* Use xmldom instead of sax to parse XML documents. This should remove the need