@@ -18,10 +18,12 @@ var commentsReader = require("./comments-reader");
 var Files = require("./files").Files;
 
 
-function read(docxFile, input) {
+function read(docxFile, input, options) {
     input = input || {};
+    options = options || {};
 
     var files = new Files({
+        externalFileAccess: options.externalFileAccess,
         relativeToFile: input.path
     });
 
