@@ -13,6 +13,15 @@ exports.uriToPath = uriToPath;
 
 
 function Files(options) {
+    options = options || {};
+    if (!options.externalFileAccess) {
+        return {
+            read: function(uri) {
+                return promises.reject(new Error("could not read external image '" + uri + "', external file access is disabled"));
+            }
+        };
+    }
+
     var base = options.relativeToFile ? dirname(options.relativeToFile) : null;
 
     function read(uri, encoding) {
