@@ -39,7 +39,7 @@ function convert(input, options) {
             });
         })
         .then(function(docxFile) {
-            return docxReader.read(docxFile, input)
+            return docxReader.read(docxFile, input, options)
                 .then(function(documentResult) {
                     return documentResult.map(options.transformDocument);
                 })
