@@ -63,6 +63,7 @@ var defaultStyleMap = exports._defaultStyleMap = [
 ];
 
 var standardOptions = exports._standardOptions = {
+    externalFileAccess: true,
     transformDocument: identity,
     includeDefaultStyleMap: true,
     includeEmbeddedStyleMap: true
